<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">Epoch</string>
    <string name="hello_world">Epoch!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_epoch">Epoch</string>
    <string name="title_activity_add_event">AddEventActivity</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="dateformat1">day.month.year</string>
    <string name="timeformat">hours:minute</string>
    <string name="Name">Name</string>

    <!-- Default title for color picker dialog [CHAR LIMIT=30] -->
    <string name="color_picker_default_title">Select a Color</string>
    <!-- Content description for a color square. -->
    <string name="color_swatch_description">Color <xliff:g id="color_index" example="14">%1$d</xliff:g></string>
    <!-- Content description for a selected color square. -->

    <string name="color_swatch_description_selected">Color <xliff:g id="color_index" example="14">%1$d</xliff:g> selected</string>
    <string name="set_color">Color</string>
    <string name="style_">Style:</string>
    <string name="size_">Size:</string>
    <string name="visibility_">Visibility:</string>
    <string name="title_activity_event_description">EventDescriptionActivity</string>
    <string name="title_activity_edit_event_desc">EditEventDescActivity</string>
    <string name="close">Close</string>
    <string name="edit">Edit</string>
    <string name="done">Done</string>
    <string name="end_">End:</string>
    <string name="start_">Start:</string>
    <string name="start">Start</string>
    <string name="add_epoch">add epoch</string>
 	<string name="load">Load</string>
 	<string name="title_">"Title: "</string>
 	<string name="new_">New</string>
 	<string name="datum">datum</string>

</resources>
